--- a/3. GRID VS FLEX/grid.css
+++ b/3. GRID VS FLEX/grid.css
@@ -16,7 +16,7 @@
     display: grid;
     justify-content: center;
     gap: 20px;
-    grid-template-columns: repeat(auto-fit, 220px);
+    grid-auto-columns: minmax(100px, auto);
 }
 
 .card__container {
@@ -26,19 +26,54 @@
     box-shadow: 3px 3px 5px #dadada;
 }
 
-
-@media (max-width: 938px) {
+@media (max-width: 758px)  {
+    .card-1 {
+        grid-column: span 2;
+    }
+    .card-2 {
+        grid-column: span 2;
+    }
+    .card-3 {
+        grid-column: span 2;
+    }
     .card-4 {
-        width: 155%;
+        grid-column: span 2;
     }
     .card-5 {
-        width: 155%;
-        margin-left: 120px;
+        grid-column: span 4;
     }
 }
 
-@media (min-width: 938px) and (max-width: 1184px) {
+@media (min-width: 750px) and (max-width: 938px) {
+    .card-1 {
+        grid-area: 1 / 1 / 1 / 3;
+    }
+
+    .card-2 {
+        grid-area: 1 / 3 / 1 / 5;
+    }
+
+    .card-3 {
+        grid-area: 1 / 5 / 1 / 7;
+    }
+
+    .card-4 {
+        grid-area: 2 / 1 / 2 / 4;
+    }
+
+    .card-5 {
+        grid-area: 2 / 4 / 2 / 7;
+    }
+}
+
+@media (min-width: 938px) and (max-width: 1100px) {
     .card-5 {
         grid-column: span 4;
+    }
+}
+
+@media (min-width: 1100px) {
+    .one-row {
+        grid-template-columns:  repeat(5, 220px);
     }
 }
