--- a/3. GRID VS FLEX/flex.css
+++ b/3. GRID VS FLEX/flex.css
@@ -5,9 +5,12 @@
     margin: 0;
 }
 
+.cards{
+    margin: 20px;
+}
+
 .card__container {
     background-color: #f0f0f0;
-    margin: 20px 20px 20px 0;
     padding: 20px;
     width: 200px;
     border-radius: 10px;
@@ -23,5 +26,6 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 20px;
 }
 
